--- a/Style.css
+++ b/Style.css
@@ -41,20 +41,20 @@ h2 {
 h4 {
     font-size: 1.4em;
     text-align: center;
-    margin-bottom: 81%;
-    margin-top: 32%;
+    margin-bottom: 2px;
+    margin-top: 2px;
 }
 
 #Left {
-    Width: 40%
+    Width: 47.5%
 }
 
 #Middle {
-    Width: 20%
+    Width: 5%
 }
 
 #Right {
-    Width: 40%
+    Width: 47.5%
 }
 
 
